--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "keywords":     "python pypi xmlrpc client",
   "author":       "Lukasz Balcerzak",
   "contributors": ["Barry Loper <> (https://github.com/barryloper"],
-  "version":      "0.1.3dev",
+  "version":      "0.2.0dev",
   "licenses":     [{
     "type":       "MIT",
     "url":        "https://github.com/lukaszb/pypi/raw/master/LICENSE"
@@ -17,15 +17,18 @@
   },
   "main" : "./index",
   "homepage":     "https://github.com/lukaszb/pypi",
+  "scripts": {
+    "prepublish": "coffee -o lib -c src"
+  },
   "repository":   {
     "type": "git",
     "url": "git://github.com/barryloper/node-pypi.git"
   },
   "dependencies": {
-    "coffee-script": ">=1.1.1",
     "xmlrpc": "barryloper/node-xmlrpc"
   },
   "devDependencies" : {
+    "coffee-script": ">=1.1.1",
     "underscore" : ">=1.2.1",
     "jasmine-node": ">=1.0.12"
   }
